tests/parse-errors/issue053-1.zir
fun comp f() {
  x <- take; 
}

let comp main = read[int] >>> write[int]
